# Gmail-AI-Sorter

./: .gitignore  README.md  check_models.py  main.py  pyproject.toml
config/: settings.py
src/agents/: base_agent.py  email_analyzer.py
src/models/: email.py  email_analysis.py
src/prompts/: email_prompts.py
src/services/: email_data_service.py  gemini_service.py  gemini_test.py  gmail_service.py  gmail_test.py
src/utils/: retry.py
